compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_float_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 293
expression: "let x = <<1:8-float>> x"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:8-float>> x
  │             ^ Size cannot be used with float.

Hint: floats have an exact size of 64 bits.
See: https://gleam.run/book/tour/bit-strings.html

